# qt_gl_demo

./: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
shaders/: shaders.qrc  triangle.frag  triangle.vert
views/: bottom_view.cpp  bottom_view.h  gl_widget.cpp  gl_widget.h  left_view.cpp  left_view.h
